# nldate

./: main.py  pyproject.toml  showlines.py
nldate/: __init__.py  _parse.py
src/nldate/: __init__.py  _parse.py
tests/: test_parse.py
